# aegis-pilot

./: .env.example  .gitignore  Cargo.toml  README.md
cloudformation/: dr-region.yaml  global-resources.yaml  primary-region.yaml
docs/: runbook.md  testing-procedures.md
lambda-functions/backup-manager/: Cargo.toml
lambda-functions/backup-manager/src/: lib.rs  main.rs
lambda-functions/backup-manager/tests/: main.rs
lambda-functions/data-validator/: Cargo.toml
lambda-functions/data-validator/src/: main.rs
lambda-functions/data-validator/tests/: main.rs
lambda-functions/failover-controller/: Cargo.toml
lambda-functions/failover-controller/src/: lib.rs  main.rs
lambda-functions/failover-controller/tests/: main.rs
lambda-functions/health-check/: Cargo.toml
lambda-functions/health-check/src/: lib.rs  main.rs
lambda-functions/health-check/tests/: main.rs
monitoring/: cloudwatch-dashboards.json
scripts/: cleanup.sh  deploy.sh  test-deploy.sh  test-failover.sh
