[package]
name = "backup-manager"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "backup_manager"
path = "src/lib.rs"

[[bin]]
name = "backup-manager-bootstrap"
path = "src/main.rs"

[dependencies]
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-sdk-s3 = { workspace = true }
lambda_runtime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_dynamo = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
mockall = "0.12"
tokio-test = "0.4"
