[package]
name = "data-validator"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-sdk-cloudwatch = { workspace = true }
tokio = { workspace = true }
lambda_runtime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
bon = { workspace = true }

[[bin]]
name = "data-validator-bootstrap"
path = "src/main.rs"
