[package]
name = "failover-controller"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-sdk-cloudwatch = { workspace = true }
lambda_runtime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }

[[bin]]
name = "bootstrap"
path = "src/main.rs"
