[package]
name = "failover-controller"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "failover_controller"
path = "src/lib.rs"

[[bin]]
name = "failover-controller-bootstrap"
path = "src/main.rs"

[dependencies]
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-sdk-cloudwatch = { workspace = true }
lambda_runtime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
mockall = "0.12"
tokio-test = "0.4"
