[package]
name = "health-check"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "health_check"
path = "src/lib.rs"

[[bin]]
name = "health-check-bootstrap"
path = "src/main.rs"

[dependencies]
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-sdk-cloudwatch = { workspace = true }
aws-sdk-s3 = { workspace = true }
lambda_runtime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
mockall = "0.12"
aws-smithy-runtime = "1.1"
aws-smithy-types = "1.1"
aws-smithy-runtime-api = "1.1"
tokio-test = "0.4"
